# ChangeLog for net-wireless/blueman
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-wireless/blueman/ChangeLog,v 1.9 2010/10/31 22:36:01 ssuominen Exp $

  31 Oct 2010; Samuli Suominen <ssuominen@gentoo.org>
  blueman-1.21-r1.ebuild:
  Enable sys-auth/polkit support wrt #340084.

  08 Jun 2010; Tiziano Müller <dev-zero@gentoo.org> blueman-1.21.ebuild,
  blueman-1.21-r1.ebuild:
  Re-added dropped ~ppc keyword.

*blueman-1.21-r1 (08 Jun 2010)

  08 Jun 2010; Tiziano Müller <dev-zero@gentoo.org>
  +blueman-1.21-r1.ebuild:
  Update icon cache in pkg_postinst/postrm (bug #321921).

*blueman-1.21 (11 May 2010)

  11 May 2010; Tiziano Müller <dev-zero@gentoo.org> +blueman-1.21.ebuild:
  Version bump (bug #289902). Also solves bug #274085 (stripping bogus
  line), bug #274894 (drop dep on notification-daemon completely,
  automatically pulled in via notify-python), bug #283721 (solved by
  upstream), bug #315893 (use get_python_sitedir), bug #316507 (added
  --disable-static and rm *.la file), bug #285907 (solved by upstream).

  25 Apr 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  blueman-1.02.ebuild, blueman-1.10.ebuild:
  Delete calls to deprecated python_version().

  07 Nov 2009; Mounir Lamouri <volkmar@gentoo.org> blueman-1.10.ebuild:
  Keywording for ppc, bug 270737

*blueman-1.10 (23 Apr 2009)

  23 Apr 2009; Tiziano Müller <dev-zero@gentoo.org> +blueman-1.10.ebuild:
  Version bump (bug #266901).

  02 Mar 2009; Tiziano Müller <dev-zero@gentoo.org> blueman-1.02.ebuild:
  Added gnome USE flag for gconf-python dependency. Added
  pkg_postrm/postinst functions calling mod_python_optimize/cleanup and
  setting python_need_rebuild.

*blueman-1.02 (01 Mar 2009)

  01 Mar 2009; Tiziano Müller <dev-zero@gentoo.org> +metadata.xml,
  +blueman-1.02.ebuild:
  Initial commit for bug #214554. Ebuild written from scratch by me.
