@@ -1,4 +1,4 @@
 DIST blueman-1.21.tar.gz 1086099 RMD160 d13479615d11a4848d5629ca541b2f8f995befec SHA1 ec513e1a1c7bc99dd695baf7b934e38e7ea86cd6 SHA256 86200dab50b1595c9a9537586c07de90ccfa084b954bb74f3e8732cc000fe3af
-EBUILD blueman-1.21-r1.ebuild 2106 RMD160 7ab89b94b3dd4c74476abdc4892d6953dbbc0d9c SHA1 4018ea937db36298210ab69d395001025c2d0042 SHA256 62050273b82c38115d7cedefc54d2ce41f2e71b46c8996035a84d38a9cc30de0
-MISC ChangeLog 1934 RMD160 791935853b2a20e3b47aadff76b937b8ae8c11d8 SHA1 335a6570e01e187f0e805f92564eac4f48e0fa90 SHA256 6f218cf3685a7bf3b54149907dc387b091552dcaaa9283b9a128070b4e98f761
+EBUILD blueman-1.21-r1.ebuild 2098 RMD160 bfaff432c1d91c660f283e2443b25d9e92405100 SHA1 1a375cd725e3c770f55966a1bf17ec3093838801 SHA256 91f110690df60d1b80c91107ef51cd02364dcd444c1699e048571e231c75f1ca
+MISC ChangeLog 2057 RMD160 3a6f7837a1004f1c95c70d1291bf40b7dbca1803 SHA1 bb372d32d10c28d0c057c6e341870da1a933027b SHA256 7d265e93d8c5ac41a21adbb6825f6dc81ac2484b58b33fcb93cfe2220d258184
 MISC metadata.xml 389 RMD160 927c639a1d47d4ce89bfa7f141efbcd4630a72e5 SHA1 de4e94bb8c1958a3cee35a79e24641fd49405f95 SHA256 5da178f7b84f7858ca7bee032dcff7c963c46d42800c2929e3e0a4daecd413eb
